--- a/app/src/main/res/layout/fragment_bill_detail.xml
+++ b/app/src/main/res/layout/fragment_bill_detail.xml
@@ -5,8 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".BillDetailFragment">
 
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarDetail"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
     <!--Top-->
     <RelativeLayout
+        android:layout_below="@+id/toolbarDetail"
         android:id="@+id/layoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -38,7 +47,6 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/txtTotal"
         android:layout_below="@+id/layoutTop"/>
-
 
 
     <!--Base-->
