--- a/app/src/main/res/layout/fragment_desk.xml
+++ b/app/src/main/res/layout/fragment_desk.xml
@@ -1,12 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DeskFragment">
 
+    <!--Row9-->
+    <LinearLayout
+        android:layout_below="@+id/linOld"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/imv9_0"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_1"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_2"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_3"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_4"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_5"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_6"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_7"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_8"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+        <TextView
+            android:id="@+id/imv9_9"
+            android:layout_width="@dimen/tite"
+            android:layout_height="@dimen/tite"
+            />
+
+
+    </LinearLayout>
+    // Row9
+
     <!--Lin#1-->
     <LinearLayout
+        android:id="@+id/linOld"
         android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -646,73 +719,7 @@
         // Row8
 
         <!--Row9-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/imv9_0"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_1"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_2"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_3"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_4"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_5"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_6"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_7"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_8"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-            <TextView
-                android:id="@+id/imv9_9"
-                android:layout_width="@dimen/tite"
-                android:layout_height="@dimen/tite"
-                />
-
-
-        </LinearLayout>
         // Row9
 
 
@@ -723,4 +730,6 @@
     // Lin#1
 
 
-</RelativeLayout>
+
+
+</LinearLayout>
